Updated deprecated code after updating dependencies